--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="card-body">
       <h5 class="card-title">Bendicion Oficial Del Cielo</h5>
       <p class="card-text">Hace ochocientos años, Xie Lian era el Príncipe Heredero del reino de Xianle; uno que fue amado por sus ciudadanos y recibió el amor del mundo. Como era de esperar, ascendió a los cielos a una edad muy temprana. Ahora, ochocientos años después...</p>
-      <a href="./sections/danmei.html" class="btn btn-primary">Seguir Leyendo</a>
+      <a href="./sections/damnei.html" class="btn btn-primary">Seguir Leyendo</a>
     </div>
   </div>
 
