manga.html imagenes

--- a/sections/manga.html
+++ b/sections/manga.html
@@ -43,32 +43,58 @@
   <!--end menu-->
   
   <nav id="manga">
-      <h1 class="display-2">Mangas y Comics</h1>
-    </nav>
+    <h1 class="display-2">Mangas y Comics</h1>
+  </nav>
 
   <!--cards-->
   <h1 class="display-5" id="h1">Mangas de mundos distopicos</h1>
   <nav id="mangaDisplay">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 15rem;">
         <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9781/5911/9781591167532.jpg" class="card-img-top" alt="hxh">
         <div class="card-body">
           <h5 class="card-title">Hunter X Hunter</h5>
-
-          <p class="card-text">La historia tiene como protagonista a Gon Freecss, un niño de doce años que desea encontrar a su padre a toda costa, por lo que decide convertirse en «cazador», justo como él, y de alguna forma hallar su paradero. A medida que avanza la historia, Gon se hace amigo de otros tres aspirantes a cazador: Leorio, Kurapika y Killua, quienes lo acompañarán en sus aventuras.</p>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">La historia tiene como protagonista a Gon Freecss, un niño de doce años que desea encontrar a su padre a toda costa, por lo que decide convertirse en «cazador», justo como él, y de alguna forma hallar su paradero. A medida que avanza la historia, Gon se hace amigo de otros tres aspirantes a cazador: Leorio, Kurapika y Killua, quienes lo acompañarán en sus aventuras.</p>
+           </div>
+        </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 15rem;">
         <img src="https://images-na.ssl-images-amazon.com/images/I/51T+sKvrjzL._SY344_BO1,204,203,200_.jpg" class="card-img-top" alt="aot">
         <div class="card-body">
           <h5 class="card-title">Attack On Titans</h5>
-          <p class="card-text">Cuenta la historia de la humanidad en una época con estética germana del siglo 19, luchando por sobrevivir durante los ataques de unos seres humanoides gigantes llamados titanes. Los titanes se dedican a comer humanos por puro gusto. Luego de una larga espera, los fanáticos pudieron presenciar cómo continuaba la historia de Eren, Levi y su grupo de soldados.</p>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">Cuenta la historia de la humanidad en una época con estética germana del siglo 19, luchando por sobrevivir durante los ataques de unos seres humanoides gigantes llamados titanes. Los titanes se dedican a comer humanos por puro gusto. Luego de una larga espera, los fanáticos pudieron presenciar cómo continuaba la historia de Eren, Levi y su grupo de soldados.</p>
+           </div>
+         </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 15rem;">
         <img src="https://images-na.ssl-images-amazon.com/images/I/51FAgOL-1bL._SY291_BO1,204,203,200_QL40_FMwebp_.jpg" class="card-img-top" alt="mha">
         <div class="card-body">
           <h5 class="card-title">My Hero Academia</h5>
-          <p class="card-text">La historia tiene lugar en un mundo donde el 80% de la población ha desarrollado «dones», surgiendo así héroes y villanos... Midoriya accede y empieza a estudiar en la U.A, donde hace nuevos amigos, conoce otros héroes profesionales, aprende a dominar sus poderes y se enfrenta a auténticos villanos.</p>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">La historia tiene lugar en un mundo donde el 80% de la población ha desarrollado «dones», surgiendo así héroes y villanos... Midoriya accede y empieza a estudiar en la U.A, donde hace nuevos amigos, conoce otros héroes profesionales, aprende a dominar sus poderes y se enfrenta a auténticos villanos.</p>
+           </div>
+         </div>
         </div>
       </div>
       <div class="card" style="width: 15rem;">
@@ -76,38 +102,109 @@
         <div class="card-body">
           <h5 class="card-title">Jujutsu Kaisen</h5>
           <p>
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-              Toggle width collapse
-            </button>
-          </p>
-          <div style="min-height: 120px;">
-            <div class="collapse collapse-horizontal" id="collapseWidthExample">
-              <div class="card card-body" style="width: 300px;">
-                <p class="card-text">Yuji Itadori es un genio en el atletismo. Pero no tiene ningún interés de correr en círculos, está contento como una almeja en el Club de Investigación Oculta. Aunque solo está en el club por diversión, ¡las cosas se ponen serias cuando aparece un verdadero espíritu en la escuela!</p>
-              </div>
-            </div>
-          </div>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Más Información
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+            <p class="card-text">Yuji Itadori es un genio en el atletismo. Pero no tiene ningún interés de correr en círculos, está contento como una almeja en el Club de Investigación Oculta. Aunque solo está en el club por diversión, ¡las cosas se ponen serias cuando aparece un verdadero espíritu en la escuela!</p>
+           </div>
+         </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 15rem;">
         <img src="https://images-na.ssl-images-amazon.com/images/I/51bDA66yMbL._SX335_BO1,204,203,200_.jpg" alt="ft">
         <div class="card-body">
           <h5 class="card-title">Fairy Tail</h5>
-          <p class="card-text">El gremio de magos Fairy Tail es el más temido de todo el reino. Allí conviven los magos más duros, los más atrevidos...y los más destructivos.Lucy es una chica que quiere ingresar en Fairy Tail, para poder desarrollar sus poderes mágicos y cumplir los encargos que le puedan salir desde el gremio. Es así como conoce a Natsu, un Dragon Slayer, mago que utiliza la magia de los dragones, y que le permite convertir en fuego cualquier parte de su cuerpo. Junto al resto de sus compañeros, se enfrentarán a los encargos más temibles y duros que les puedan llegar, incluso contra otros gremios que ansían el poder de Fairy Tail.</p>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">El gremio de magos Fairy Tail es el más temido de todo el reino. Allí conviven los magos más duros, los más atrevidos...y los más destructivos.Lucy es una chica que quiere ingresar en Fairy Tail, para poder desarrollar sus poderes mágicos y cumplir los encargos que le puedan salir desde el gremio. Es así como conoce a Natsu, un Dragon Slayer, mago que utiliza la magia de los dragones, y que le permite convertir en fuego cualquier parte de su cuerpo. Junto al resto de sus compañeros, se enfrentarán a los encargos más temibles y duros que les puedan llegar, incluso contra otros gremios que ansían el poder de Fairy Tail.</p>
+           </div>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="https://pack-yak.intomanga.com/images/manga/One-Piece/chapter/980/page/1/4a49971b-534f-44ff-b886-f193a5ac5d3d" alt="op">
+      <div class="card" style="width: 15rem;">
+        <img src="https://mangaplus.shueisha.co.jp/drm/title/200016/title_thumbnail_portrait_list/14332.jpg?key=a6c3119192468ad5f39d23ad136ed3e0&duration=86400" alt="op">
         <div class="card-body">
           <h5 class="card-title">One Piece</h5>
           <p>
             <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-             Button with data-bs-target
+             Mas Informacion
            </button>
          </p>
          <div class="collapse" id="collapseExample">
            <div class="card card-body">
             <p class="card-text">Esta es la gran Era Pirata. Gold Roger, el legendario “Rey de los piratas” ha dejado el “One Piece” - su legendario Tesoro - escondido en una zona del mundo llamada “GRAND LINE” y los piratas más fuertes compiten por hallarlo. Un niño llamado Luffy idolatraba a los piratas, en especial a Shanks, el líder de una tripulación que visitó su villa. Un día, por accidente, Luffy comió una “fruta del diablo” del botín de Shanks. Gracias a esa fruta, su cuerpo se ha vuelto de goma pero nunca podrá nadar.</p>
+           </div>
+        </div>
+        </div>
+      </div>
+      <div class="card" style="width: 15rem;">
+        <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/4a/ff/4aff01bc8af8faa22f460a5ebb7f27d6.jpg" alt="ft">
+        <div class="card-body">
+          <h5 class="card-title">Fire Punch</h5>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">EN UN MUNDO HELADO, LAS LLAMAS SON UNO DE LOS BIENES MÁS PRECIADOS… “La bruja del hielo” es la culpable de que todo haya quedado cubierto completamente por la nieve, la locura y el hambre mientras que la población mundial, congelada, suspira por unas llamas. En este mundo, Agni y su hermana pequeña, Luna, son dos muchachos que han sido bendecidos con la capacidad de la regeneración. ¡¿Qué atroz futuro les espera a estos dos hermanos sin familia alguna?!</p>
+           </div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 15rem;">
+        <img src="https://www.normaeditorial.com/upload/media/albumes/0001/07/xthumb_6655_albumes_big.jpeg.pagespeed.ic.v21rVHX1J7.webp" alt="cm">
+        <div class="card-body">
+          <h5 class="card-title">ChainSaw Man</h5>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">Denji es un chico sin un duro que se deja la piel trabajando como Devil Hunter junto a su perro demoníaco Pochita para resarcir una deuda astronómica, pero entonces... ¡¡una sangrienta traición da un giro radical a su miserable vida!!</p>
+           </div>
+        </div>
+        </div>
+      </div>
+      <div class="card" style="width: 15rem;">
+        <img src="https://mangaplus.shueisha.co.jp/drm/title/200012/title_thumbnail_portrait_list/14320.jpg?key=df264fbe1de3678d0de2bdaa4e23f8eb&duration=86400" alt="Bl">
+        <div class="card-body">
+          <h5 class="card-title">Bleach</h5>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">Ichigo Kurosaki de 15 años de edad, es un chico que puede ver y contactar con fantasmas. A pesar de tener ese don especial, Ichigo lleva una vida tranquila pero, de repente, aparece ante él una chica que se hace llamar a sí misma “Shinigami”(Dios de la Muerte), y son atacados por un espíritu maligno llamado “Hollow” que aparentemente es un devorador de almas. Los miembros de su familia caen uno a uno frente a él. ¿Qué hará Ichigo?</p>
+           </div>
+        </div>
+        </div>
+      </div>
+      <div class="card" style="width: 15rem;">
+        <img src="https://mangaplus.shueisha.co.jp/drm/title/200022/title_thumbnail_portrait_list/14350.jpg?key=de7dd6d168929f918ed807e6bd5e1172&duration=86400" alt="drs">
+        <div class="card-body">
+          <h5 class="card-title">Dr Stone</h5>
+          <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             Mas Informacion
+           </button>
+         </p>
+         <div class="collapse" id="collapseExample">
+           <div class="card card-body">
+             <p class="card-text">El día que Taiju Oki, un adolescente fuerte pero algo palurdo, se decide por fin a declararle su amor a Yuzuriha, sucede algo radical e inesperado: justo un segundo antes de la declaración, causas desconocidas llevan al total de la humanidad a convertirse instantáneamente en piedra. Después de 3.689 años y 158 días, durante los que ha luchado por no perder la consciencia y desaparecer, Taiju finalmente emerge de la piedra y vuelve a la normalidad. Aunque sólo para descubrir que el resto de la humanidad jamás despertó de su sueño pétreo</p>
            </div>
         </div>
         </div>
