--- a/sections/romance.html
+++ b/sections/romance.html
@@ -87,87 +87,112 @@
 
   <!--cards-->
   <div class="cardDisplay">
-      <div class="card" style="width: 18rem;">
-         <img src="https://m.media-amazon.com/images/I/51c+RkKG-8L.jpg" class="card-img-top" alt="ylt">
-         <div class="card-body">
-            <h5 class="card-title">Y De Repente Tu</h5>
-            <p class="card-text">Cuando te han roto el corazón, nada mejor que darle una segunda oportunidad al amor...</p>
-         </div>
-         </div>
-         <div class="card" style="width: 18rem;">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/41YttQlxWuL._SX327_BO1,204,203,200_.jpg" class="card-img-top" alt="chm">
-        <div class="card-body">
-            <h5 class="card-title">Cenicienta Ha Muerto</h5>
-       <p class="card-text">Cenicienta ha muerto anuncia la llegada de una nueva voz épica a la narrativa fantástica infantil y juvenil...</p>
-     </div>
-     </div>
-
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/51CgIoIGnhL._SX325_BO1,204,203,200_.jpg" class="card-img-top" alt="ayddlsdu">
-     <div class="card-body">
-       <h5 class="card-title">Aristoteles Y Dante Descubren Los Secretos Del Universo</h5>
-       <p class="card-text">Una novela para todos aquellos que han tenido que aprender a jugar con otras reglas...</p>
-     </div>
-     </div>
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/41SgMS3pYDL._SX330_BO1,204,203,200_.jpg" class="card-img-top" alt="rbysz">
-     <div class="card-body">
-       <h5 class="card-title">Rojo Blanco Y Sangre Azul</h5>
-       <p class="card-text">A veces, el amor puede ser una cuestión de Estado...</p>
-     </div>
-
-     </div>
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/411NW8oz5xL._SX315_BO1,204,203,200_.jpg" class="card-img-top" class="card-img-top" alt="afmld">
-     <div class="card-body">
-       <h5 class="card-title">Al Final Mueren Los Dos</h5>
-       <p class="card-text">Una historia sobre la vida, la amistad y el amor. ¿Puede un solo día albergar toda una vida?</p>
-     </div>
-     </div>
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/51Yc3EXdIOL._SX347_BO1,204,203,200_.jpg" class="card-img-top" alt="lcda">
-     <div class="card-body">
-       <h5 class="card-title">La Cancion De Aquiles</h5>
-       <p class="card-text">De la autora de Circe, una epopeya inolvidable...</p>
-     </div>
-     </div>
-     <div class="card" style="width: 18rem;">
-     <img src="https://m.media-amazon.com/images/I/41nYoddwtBL.jpg" class="card-img-top" alt="lhda">
-     <div class="card-body">
-       <h5 class="card-title">La Hipotesis Del Amor</h5>
-       <p class="card-text">Una relación falsa entre dos científicos se topa con la irresistible fuerza de la atracción...</p>
-     </div>
-     </div>
-
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/41LoQdiXGBL._SX334_BO1,204,203,200_.jpg" class="card-img-top" alt="epc"" class="card-img-top" alt="pc">
-     <div class="card-body">
+    <div class="card" style="width: 15rem;">
+      <img src="https://m.media-amazon.com/images/I/51c+RkKG-8L.jpg" class="card-img-top" alt="ylt">
+      <div class="card-body">
+        <h5 class="card-title">Y De Repente Tu</h5>
+        <p class="card-text">Cuando te han roto el corazón, nada mejor que darle una segunda oportunidad al amor...</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/41YttQlxWuL._SX327_BO1,204,203,200_.jpg" class="card-img-top" alt="chm">
+      <div class="card-body">
+        <h5 class="card-title">Cenicienta Ha Muerto</h5>
+        <p class="card-text">Cenicienta ha muerto anuncia la llegada de una nueva voz épica a la narrativa fantástica infantil y juvenil...</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/51CgIoIGnhL._SX325_BO1,204,203,200_.jpg" class="card-img-top" alt="ayddlsdu">
+      <div class="card-body">
+        <h5 class="card-title">Aristoteles Y Dante Descubren Los Secretos Del Universo</h5>
+        <p class="card-text">Una novela para todos aquellos que han tenido que aprender a jugar con otras reglas...</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/41SgMS3pYDL._SX330_BO1,204,203,200_.jpg" class="card-img-top" alt="rbysz">
+      <div class="card-body">
+        <h5 class="card-title">Rojo Blanco Y Sangre Azul</h5>
+        <p class="card-text">A veces, el amor puede ser una cuestión de Estado...</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/411NW8oz5xL._SX315_BO1,204,203,200_.jpg" class="card-img-top" class="card-img-top" alt="afmld">
+      <div class="card-body">
+        <h5 class="card-title">Al Final Mueren Los Dos</h5>
+        <p class="card-text">Una historia sobre la vida, la amistad y el amor. ¿Puede un solo día albergar toda una vida?</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/51Yc3EXdIOL._SX347_BO1,204,203,200_.jpg" class="card-img-top" alt="lcda">
+      <div class="card-body">
+        <h5 class="card-title">La Cancion De Aquiles</h5>
+        <p class="card-text">De la autora de Circe, una epopeya inolvidable...</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://m.media-amazon.com/images/I/41nYoddwtBL.jpg" class="card-img-top" alt="lhda">
+      <div class="card-body">
+        <h5 class="card-title">La Hipotesis Del Amor</h5>
+         <p class="card-text">Una relación falsa entre dos científicos se topa con la irresistible fuerza de la atracción...</p>
+        </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/41LoQdiXGBL._SX334_BO1,204,203,200_.jpg" class="card-img-top" alt="epc"" class="card-img-top" alt="pc">
+      <div class="card-body">
        <h5 class="card-title">Principe Cautivo</h5>
        <p class="card-text">Damen es un heroico guerrero y el legítimo heredero del trono de Akielos. Pero cuando su medio hermano se hace con el poder, Damen es capturado y vendido como esclavo...</p>
      </div>
-     </div>
-     <div class="card" style="width: 18rem;">
+    </div>
+    <div class="card" style="width: 15rem;">
      <img src="https://images-na.ssl-images-amazon.com/images/I/51EK-XYQTES._SX331_BO1,204,203,200_.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="mbass">
      <div class="card-body">
        <h5 class="card-title">Morire Besando A Simon Snow</h5>
        <p class="card-text">Simon es el peor Elegido que nadie podría haber elegido. Al menos eso es lo que dice Baz, su némesis.La mayor parte del tiempo, Simon ni siquiera puede controlar su magia,¿y tiene que salvar el mundo?</p>
      </div>
-     </div>
-     <div class="card" style="width: 18rem;">
+    </div>
+    <div class="card" style="width: 15rem;">
      <img src="https://images-na.ssl-images-amazon.com/images/I/41h0E9kM6CL._SX328_BO1,204,203,200_.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="lup">
      <div class="card-body">
        <h5 class="card-title">La Ultima Parada</h5>
        <p class="card-text">August, una joven de veintitrés años, no cree en casi nada. Ni en los videntes, ni en las amistades que se entablan con facilidad, ni en encontrar esa clase de amor que sale en las películas. Entonces llega Jane. La misteriosa e imposible Jane.</p>
-     </div>
-     </div>
-     <div class="card" style="width: 18rem;">
-     <img src="https://images-na.ssl-images-amazon.com/images/I/51s2ziWSNpL._SY291_BO1,204,203,200_QL40_FMwebp_.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="lvdsi">
-     <div class="card-body">
-       <h5 class="card-title">Las Ventajas De Ser Invisible</h5>
-       <p class="card-text"> Charlie es un chico realmente especial: lee muchísimo, no sale con amigos ni con chicas y reflexiona sobre el mundo desde un punto de vista muy particular.Conocer a Sam y Patrick, los chicos más populares y vitales del colegio, provocará un giro radical en su vida que lo sumergirá de pleno en la adolescencia.</p>
-     </div>
-     </div>
+      </div>
     </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/51s2ziWSNpL._SY291_BO1,204,203,200_QL40_FMwebp_.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="lvdsi">
+      <div class="card-body">
+        <h5 class="card-title">Las Ventajas De Ser Invisible</h5>
+        <p class="card-text"> Charlie es un chico realmente especial: lee muchísimo, no sale con amigos ni con chicas y reflexiona sobre el mundo desde un punto de vista muy particular.Conocer a Sam y Patrick, los chicos más populares y vitales del colegio, provocará un giro radical en su vida que lo sumergirá de pleno en la adolescencia.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images.cdn1.buscalibre.com/fit-in/360x360/a5/4e/a54e6e8a9f75669f7b307233b5fba196.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="wh">
+      <div class="card-body">
+        <h5 class="card-title">Wishes</h5>
+        <p class="card-text">¿Y si te dijera que la magia existe? Los magos, los ángeles, las criaturas, todo es real… incluso los deseos. Cada mago debe gastar su magia de algún modo, Alexander Leblanc concede deseos a cambio de historias o recuerdos, luego guarda su paga en frascos mágicos que eligen al azar el precio a pagar... y sigue con su vida. Una rutina monótona y constante…Hasta que conoce a Lucian Asher.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/67/90/6790326ab0aa68428efcfe6f47a7e9c5.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="crn">
+      <div class="card-body">
+        <h5 class="card-title">Carnaval</h5>
+        <p class="card-text">Bienvenidos a Caraval, donde nada es lo que parece... Scarlett no ha salido nunca de la diminuta isla de Trisda, donde sueña con las maravillas de Caraval. Caraval es magia. Misterio. Aventura. Y para Scarlett y su querida hermana Tella, representa la libertad.Pero cuando Tella desaparece, secuestrada por el organizador del espectáculo.Scarlett descubre que todo lo que sucede en Caraval es una compleja ilusión. </p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/fc/ba/fcba9bf637cdeec7598e936bd16e78ee.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="ego">
+      <div class="card-body">
+        <h5 class="card-title">El Guerrero Oculto</h5>
+        <p class="card-text">Una amistad. Una misión. Una lucha por la identidad. Al cumplir los 17 años, Nálum debe asistir al baile anual en el palacio del emperador y encontrar una pareja digna de la aprobación de su padre. Pero un terrible ataque a la familia real pone en riesgo su mundo. Nálum hará lo que sea por restituir el orden, incluso infiltrarse en una peligrosa misión y, finalmente, enfrentar a todos sus demonios.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/3b/4d/3b4dd9c9bd88ee5e92b20d28b8a96d02.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="eldle">
+      <div class="card-body">
+        <h5 class="card-title">El Lenguaje De Las Espinas</h5>
+        <p class="card-text">Viaja a un mundo de oscuras joyas bañadas por la luz de la luna, de pueblos encantados y bosques hambrientos, de bestias parlantes y golems de pan de jengibre; un lugar donde las voces de unas jóvenes sirenas pueden provocar amenazantes tormentas y donde un río podría hacerle una suculenta oferta a un chico enamorado a cambio de un terrible precio.</p>
+      </div>
+    </div>
+  </div>
   <!--end cards-->
 
   <nav class="contactos">
@@ -176,13 +201,12 @@
       <a class="social-link social-link--github" id="github">
         <svg class="social-svg" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
           <title>
-            github
+           GitHub
           </title>
           <g class="social-group" fill="none" fill-rule="evenodd">
             <circle class="social-group__outline" stroke="#000" stroke-width="20" cx="300" cy="300" r="262.5" />
             <circle class="social-group__inner-circle" fill="#000" cx="300" cy="300" r="252.5" />
-            <path class="social-group__icon" d="M300 150c-82.8348 0-150 68.8393-150 153.817 0 67.9687 42.991 125.558 102.5893 145.9151 7.5 1.4063 10.2455-3.3482 10.2455-7.433 0-3.683-.134-13.3259-.2009-26.183-41.7187 9.308-50.558-20.625-50.558-20.625-6.8304-17.7456-16.6741-22.5-16.6741-22.5-13.5938-9.576 1.0044-9.375 1.0044-9.375 15.067 1.0714 22.9688 15.8705 22.9688 15.8705 13.3929 23.5045 35.0893 16.741 43.6607 12.7902 1.3393-9.9107 5.2232-16.741 9.509-20.558-33.2813-3.884-68.3036-17.076-68.3036-76.0045 0-16.808 5.8259-30.5357 15.4018-41.25-1.5402-3.884-6.6965-19.5536 1.4732-40.7143 0 0 12.5893-4.1518 41.25 15.7366 11.9866-3.4152 24.7768-5.0893 37.567-5.1562 12.7231.067 25.5803 1.741 37.5669 5.1562 28.6607-19.8884 41.183-15.7366 41.183-15.7366 8.1697 21.1607 3.0134 36.8304 1.4733 40.7143 9.5758 10.7812 15.4017 24.509 15.4017 41.25 0 59.0625-35.0892 72.0536-68.5044 75.8705 5.3571 4.7545 10.1785 14.1295 10.1785 28.4598 0 20.558-.2009 37.1652-.2009 42.1875 0 4.0849 2.6786 8.9063 10.3125 7.3661C407.076 429.308 450 371.7187 450 303.817 450 218.8393 382.8348 150 300 150z"
-              fill="#FFF" fill-rule="nonzero" />
+            <path class="social-group__icon" d="M300 150c-82.8348 0-150 68.8393-150 153.817 0 67.9687 42.991 125.558 102.5893 145.9151 7.5 1.4063 10.2455-3.3482 10.2455-7.433 0-3.683-.134-13.3259-.2009-26.183-41.7187 9.308-50.558-20.625-50.558-20.625-6.8304-17.7456-16.6741-22.5-16.6741-22.5-13.5938-9.576 1.0044-9.375 1.0044-9.375 15.067 1.0714 22.9688 15.8705 22.9688 15.8705 13.3929 23.5045 35.0893 16.741 43.6607 12.7902 1.3393-9.9107 5.2232-16.741 9.509-20.558-33.2813-3.884-68.3036-17.076-68.3036-76.0045 0-16.808 5.8259-30.5357 15.4018-41.25-1.5402-3.884-6.6965-19.5536 1.4732-40.7143 0 0 12.5893-4.1518 41.25 15.7366 11.9866-3.4152 24.7768-5.0893 37.567-5.1562 12.7231.067 25.5803 1.741 37.5669 5.1562 28.6607-19.8884 41.183-15.7366 41.183-15.7366 8.1697 21.1607 3.0134 36.8304 1.4733 40.7143 9.5758 10.7812 15.4017 24.509 15.4017 41.25 0 59.0625-35.0892 72.0536-68.5044 75.8705 5.3571 4.7545 10.1785 14.1295 10.1785 28.4598 0 20.558-.2009 37.1652-.2009 42.1875 0 4.0849 2.6786 8.9063 10.3125 7.3661C407.076 429.308 450 371.7187 450 303.817 450 218.8393 382.8348 150 300 150z"fill="#FFF" fill-rule="nonzero" />
           </g>
         </svg>
       </a>
