--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <picture>
-          <source media="(min-width:700)" srcset="">
-        </picture>
+        <img src="./img/digiallibrary.favicon.png" alt="" width="30" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,8 +63,8 @@
   </div>
   <!--end carousel-->
 
-  <h1 class="display-5" id="nosotros">¿DE QUE SE TRATA ESTE SITIO?</h1>
-  <nav id="nosotros2">
+  <h1 class="display-5" id="sitio">¿DE QUE SE TRATA ESTE SITIO?</h1>
+  <nav>
     <h1 class="display-6">El objetivo de este pequeño sitio es proveer aquellos que disfrutan de leer un espacio para sentirse comodos y encontrar lo que mas les gusta, y para quienes no leen tan seguido introducirse a un mundo lleno de historias conmovedoras. un espacio sin fines de lucro donde encontraras tus novelas favoritas.</h1>
   </nav>
 
