--- a/sections/damnei.html
+++ b/sections/damnei.html
@@ -45,8 +45,8 @@
     <h1 class="display-3" id="danmei">¿QUE ES DANMEI?</h1>
 
     <h2 class="display-6" id="danmeiInfo">Es un tipo de literatura proveniente de China "danmei 耽美" (su significado literal seria "indulgencia a en la belleza" o "adiccion a la belleza") No es un genero nuevo, se aplica a todas las historias romanticas con relaciones homosexules, generalmente chicos/as jovenes y guapos/as.Tambien se relaciona mucho con los generos de xianxia (fantasia china) y wuxia (artes marciales), dado que muchas de las historias danmei trascurren en un contexto relacionado con las artes marciales en un mundo fantastico</h2>
-
-    <h3 class="display-6" id="InfoNovelas">Las novelas mas conocidas de este genero fueron creadas por la escritora Mo Xiang Tong Xiu "La Bendicion Oficial Del Cielo", "El Gran Maestro De La Cultivacion Demoniaca" y "Sistema De Autosalvacion De El Villano Escoria". Sus tres obras ya cuentan con live action, un manhua (comic chino) y una adaptacion animada la cual puedes encontrar facilmente en YouTube, Netflix,Bilbil o WeTV. Recientemente se publicaron los primeros tomos de sus libros en fisico pero por el momento solo estan disponibles en ingles</h3>
+    <hr>
+    <h3 class="display-6" id="InfoNovelas">Las novelas mas conocidas de este genero fueron creadas por la escritora Mo Xiang Tong Xiu "La Bendicion Oficial Del Cielo", "El Gran Maestro De La Cultivacion Demoniaca" y "Sistema De Autosalvacion De El Villano Escoria". Sus tres obras ya cuentan con live action, un manhua (comic chino) y una adaptacion animada la cual puedes encontrar facilmente en YouTube, Netflix,BiliBili o WeTV. Recientemente se publicaron los primeros tomos de sus libros en fisico pero por el momento solo estan disponibles en ingles</h3>
     
     <div class="ia-container">
       <figure>
