--- a/sections/manga.html
+++ b/sections/manga.html
@@ -15,7 +15,7 @@
   <!--menu-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../index.html">
         <img src="../img/digiallibrary.favicon.png" alt="" width="30" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,12 +42,12 @@
   </nav>
   <!--end menu-->
   
-  <nav id="manga">
+  <div id="manga">
     <h1 class="display-2">Mangas y Comics</h1>
-  </nav>
+  </div>
 
   <!--cards-->
-  <h1 class="display-5" id="h1">Mangas de mundos distopicos</h1>
+  <h2 class="display-5" id="h1">Mangas de mundos distopicos</h2>
   <nav id="mangaDisplay">
       <div class="card" style="width: 15rem;">
         <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9781/5911/9781591167532.jpg" class="card-img-top" alt="hxh">
@@ -213,8 +213,8 @@
     
   <!--end Cards-->
 
-  <nav class="contactos">
-    <nav>CONTACTOS</nav>
+  <div class="contactos">
+    <article>CONTACTOS</article>
     <div class="wrapper">
         <a class="social-link social-link--github" id="github">
             <svg class="social-svg" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -264,7 +264,7 @@
           </a>
       </div>
       <footer class="footer">- &copy;2021 - desarrollado por:milagrosraices</footer>
-  </nav>
+  </div>
   
   
   
