--- a/sections/romance.html
+++ b/sections/romance.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="romance,sagas, triologias"/>
-    <meta name="description" content="Todas las sagas e historias de romance que mas te gustan..."/>
-    <link rel="stylesheet" href="../bootstrap-local/css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../img/digiallibrary.favicon.png">
-    <title>Romance</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="romance,sagas, triologias"/>
+  <meta name="description" content="Todas las sagas e historias de romance que mas te gustan..."/>
+  <link rel="stylesheet" href="../bootstrap-local/css/bootstrap.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../img/digiallibrary.favicon.png">
+  <title>Romance</title>
 </head>
 <body id="gradienteRomance">
     <!--menu-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <img src="../img/digiallibrary.favicon.png" alt="" width="30" height="24"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -195,8 +195,8 @@
   </div>
   <!--end cards-->
 
-  <nav class="contactos">
-    <nav>CONTACTOS</nav>
+  <div class="contactos">
+    <article>CONTACTOS</article>
     <div class="wrapper">
       <a class="social-link social-link--github" id="github">
         <svg class="social-svg" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -245,7 +245,7 @@
       </a>
       </div>
     </div>
-  </nav>
+  </div>
   <footer class="footer">- &copy;2021 - desarrollado por:milagrosraices</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
