--- a/sections/damnei.html
+++ b/sections/damnei.html
@@ -15,7 +15,7 @@
   <!--menu-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../index.html">
         <img src="../img/digiallibrary.favicon.png" alt="" width="30" height="24"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
       </figure>
     </div>
 
-    <h1 class=display-6 id="novelas">Otras novelas que puedes encontar facilmente en internet:</h1>
+    <h4 class=display-6 id="novelas">Otras novelas que puedes encontar facilmente en internet:</h4>
   
   
   <!--Cards-->
@@ -137,8 +137,8 @@
   </div>
   <!--End Card-->
 
-  <nav class="contactos">
-    <nav>CONTACTOS</nav>
+  <div class="contactos">
+    <article>CONTACTOS</article>
     <div class="wrapper">
       <a class="social-link social-link--github" id="github">
         <svg class="social-svg" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -188,10 +188,9 @@
       </a>
       </div>
     </div>
-  </nav>
+  </div>
   <footer class="footer">- &copy;2021 - desarrollado por:milagrosraices</footer>
 
-  
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
