--- a/sections/damnei.html
+++ b/sections/damnei.html
@@ -177,14 +177,14 @@
                 <ul class="list-unstyled text-light light-300">
                     <li class="pb-2">
                         <a class="text-decoration-none text-light py-1" 
-          href="https://github.com/MilagrosRaices" target="_blank"> <img src="./fotos/wp32.png" alt="">GitHub</a>
+            href="https://github.com/MilagrosRaices"alt="">GitHub</a> 
                     </li>
                     <li class="pb-2">
                         <a class="text-decoration-none text-light py-1"
-          href="https://www.linkedin.com/in/milagros-ayelen-raices-435274227/" target="_blank"><img src="./fotos/mail32.png" alt="">LinkedIn</a>
+            href="https://www.linkedin.com/in/milagros-ayelen-raices-435274227/" alt="">LinkedIn</a>
                     </li>
                     <li class="pb-2">
-                        <a class="text-decoration-none text-light py-1" target="_blank"><img src="./fotos/instagram32.png" alt="">milagros.a.raices@gmail.com </a>
+                        <a class="text-decoration-none text-light py-1" alt="">milagros.a.raices@gmail.com </a>
                     </li>
             </div>
 
